--- a/data/default.yml
+++ b/data/default.yml
@@ -1,1 +1,1 @@
-HeaderBackgroundImage: "/images/article-header-background-img.jpg"
+HeaderBackgroundImage: "/images/article-header-background-img.webp"
